# errstr

./: CMakeLists.txt
include/: errstr.h
src/: errstr.c
test/: errstrftest.cpp
